--- a/tunt2.html
+++ b/tunt2.html
@@ -1,43 +1,56 @@
 <!DOCTYPE html>
 <!--kommenraar-->
-<html lang="et">
-<!--tehniline info-->
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Metshein teksti harjutused</title>
 </head>
-
+<body>
 <h1>Metshein teksti harjutused</h1>
+<i>See tekst on kaldkirjas</i>
+<br>
+<strong>See lause on tugevalt rõhutatud</strong>
+<br>
+<i>Siin on visuaalselt kaldkirijas sõna</i>
+<br>
+<b>See on ainult visuaalselt paks</b>
+<br>
+<b><i>See lause on rõhutatud ja samas ka paksendatud</i></b>
+<br>
+Siin on kasutatus <br> rea murdmist
+<br>
+Viimane sõna on <s>valeinfo</s>
+<br>
+Keemiline valem: C<sub>6</sub>H<sub>12</sub>O<sub>2</sub> -> H<sub>2</sub>O + energia
+<br>
+Matemaatiline avaldis: E = mc<sup>2</sup> + a<sup>2</sup>/B
+<br>
+<mark>Üks sõna</mark> on esile tõstetud
+<br>
+<small>See tekst on väiksem ja vähem tähtis</small>
+<br>
+Koodi näide: <code>console.log("Hei maailm!");</code>
+<br>
+Kasutaja vajutab <var>Ctrl+V</var>
+<br>
+Programmi väljund:
+<br>
+<samp>$ ping metshein.com</samp>
+<br>
+<pre>PING metshein.com (91.237.67.72): 56 data bytes</pre>
+<br>
+<aadress>64 bytes from 91.237.67.72: icmp_seq=0 ttl=54 time 24.8 ms</aadress>
+<br>
+<time>64 bytes from 91.237.67.72: icmp_seq=1 ttl=54 time 24.8 ms</time>
+<br>
 <ul>
-<i>See teksti harjutused</i>
-    <h1>Tee täpselt nii, nagu lause ütleb</h1>
-    <ul>
-        <li><i>See tekst on kaldkirjas</i></li>
-        <li><strong>See lause on tugevalt rõhutatud</strong></li>
-        <li><em>Siin on visuaalselt kaldkirjas sõna</em></li>
-        <li><b>See on ainult visuaalselt paks</b></li>
-        <li><strong><em>See lause on rõhutatud ja samas ka paksendatud</em></strong></li>
-        <li>Siin on kasutatud<br>rea murdmist</li>
-        <li><del>Välimine sõna on valeinfo</del></li>
-        <li>Keemiline valem: C<sub>6</sub>H<sub>12</sub>O<sub>6</sub> + O<sub>2</sub> → CO<sub>2</sub> + H<sub>2</sub>O + energia</li>
-        <li>Matemaatiline avaldis: E = mc<sup>2</sup> + α<sup>2</sup>/β</li>
-        <li><mark>Üks sõna</mark> on esile tõstetud</li>
-        <li>See tekst on väiksem ja <small>vähem tähtis</small></li>
-        <li>Koodi näide: <code>console.log("Hei maailm!");</code></li>
-        <li>Kasutaja vajutab <kbd>Ctrl</kbd> + <kbd>V</kbd></li>
-        <li>Programmi väljund:<br>
-        <li> ping metshein.com</li>
-        <li>PING metshein.com (91.237.67.72): 56 data bytes</li>
-        <li>64 bytes from 91.237.67.72: icmp_seq=0 ttl=54 time=24.8 ms</li>
-        <li>64 bytes from 91.237.67.72: icmp_seq=1 ttl=54 time=25.2 ms</li>
-        <li>Muutuja y väärtuseks on 42</li>
-        <li>nimi = "Mari"</li>
-        <li>if nimi == "Mari":</li>
-        <li>print("Tere tulemast, Mari!")</li>
-        <li>Autor: Juhan Juurikas, Tartu, juurikas@post.ee</li>
-        <li>Koosolek toimub 15. septembril 2028 kell 14.30</li>
-        <li>Näita HTML-koodi: <h2>Alapealkiri</h2></li>
+  <li>Muutuja <i>väärtuseks on 42</i></li>
+  <li><code>nimi = "Mari<br>
+            if nimi == "Mari":<br>
+                print("Tere tulemast, Mari!")</code></li>
+  <li><i>Autor: Juhan Juurikas, Tartu, juurikas@post.ee</i></li>
+  <li><pre>Koosolek toimub 15.septembril 2028 kell 14.30</pre></li>
+  <li>Näita HTML-koodi: <code>Alapealkiri</code></li>
 </ul>
-
 </body>
 </html>
