--- a/tood.html
+++ b/tood.html
@@ -24,13 +24,15 @@
 </nav>
 <main>
   <section id = "osa1">
-    <h2>TTHK veebirakenduse aluste mooduli leht</h2>
-    <div>Veebirakendus on arvutitarkvara või programm, mida hoitakse veebiserveris ning mida saab kasutada interneti kaudu veebibrauserite abil.</div>
+    <h2>HTML/CSS/javascript tõõd</h2>
+    <li>
+      <a href="HTMLtood/tund1.html">Esimene töö - Lehel</a></li>
+    <li>
+      <a href="HTMLtood/tund2.html">Teine töö - Lehel</a>
+    </li>
+
   </section>
-  <section id = "osa2">
-    <h2>Hea pilt</h2>
-    <img src="criper.jpg" height="24" width="24">
-  </section>
+
 </main>
 <footer>
   <strong>Kontakteeri minuga:</strong>
